(Format: Year/Month/Day)
Changes for 0.9.13
*05/04/22:
  * clear maximized-Flags of a resized/moved Window (Mathias=
    Window.cc
  * fixed Iconified+Sticky Windows not shown in Iconbar (Mathias)
    (when in WorkspaceIcons-Mode
    IconbarTool.cc
*05/04/21:
  * Fixed iconv-issues on *BSD/MacOSX (Mathias)
    configure.in
  * Fixed #1133809, ArrangeWindows covers Toolbar/Slit (Mathias)
    WorkspaceCmd.cc
*05/04/20:
  * Fixed problem with _NET_WM_STRUT (Mathias)
    WinClient.cc	  
*05/04/18:
  * Fixed problem with WindowSnapping (Mathias)
    Window.cc Slit.cc
*05/04/15:
  * Fixed #1170056 (Mathias)
    Window.cc
  * Fixed a few drawing bugs created by last patch (Simon)
    (titlebar no clear on resize, menu opening offscreen...)
    Menu.cc FbWinFrame.cc
*05/04/11:
  * Rework lots of stuff relating to transparency, esp menus+frame (Simon)
    + Massively reduce pixmap memory usage (view with xrestop)
    + Should also improve startup+style change times, esp for large menus
    + This introduces a few rendering bugs, but I'd like stuff tested
    + Transparency is done differently now. People shouldn't need to 
      call updateTransparent.
    + Do not use persistent pixmap buffers unless you're sure! 
      XSetWindowBackground already copies/buffers the set pixmap, so 
      things need to be rendered to a temp pixmap once, then can be 
      freed.
    Known bugs (please report others to Rathnor on #fluxbox):
     - different focus/unfocus transparency doesn't update labelbuttons 
       properly. Workaround: use same transparency for both.
     - Text sometimes gets overdrawn a lot. Probably should render it to 
       background using a virtual hook in FbWindow::updateBackground
     - Changing style resizes things, not all pixmaps updated properly
       Workaround: restart fluxbox after changing style
     - Probably breaks Composite support. Let me know how.
    TODO:
     + FbPixmap::getRootPixmap called very often. It should cache the 